# config-rs

./: .clippy.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml
.github/: settings.yml
.github/workflows/: ci.yml  rust-next.yml
examples/custom_file_format/: main.rs
examples/hierarchical-env/: settings.rs
examples/watch/: main.rs
src/: builder.rs  de.rs  env.rs  error.rs  lib.rs  ser.rs  source.rs  value.rs
src/file/: mod.rs
src/file/format/: json5.rs  mod.rs  ron.rs  toml.rs  yaml.rs
src/file/source/: mod.rs
src/path/: mod.rs  parser.rs
tests/: async_builder.rs  env.rs  errors.rs  file.rs  file_ini.rs  file_json.rs  file_json5.rs  file_ron.rs  file_toml.rs  file_yaml.rs  get.rs  integer_range.rs  log.rs  merge.rs  ron_enum.rs  set.rs  unsigned_int.rs  unsigned_int_hm.rs  weird_keys.rs
tests/legacy/: datetime.rs  errors.rs  file.rs  file_json.rs  file_ron.rs  file_toml.rs  file_yaml.rs  get.rs  merge.rs  set.rs
